# rust-NMF

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: benchmark_pbmc8k.ipynb  benchmark_scaling.ipynb  benchmark_vs_R.ipynb  build_hals_nndsvd_notebook.py  build_notebooks.py  build_pbmc8k_notebook.py  build_scaling_notebook.py  build_tutorial_full.py  build_vs_cnmf_notebook.py  comparison_vs_cnmf.ipynb  hals_nndsvd_demo.ipynb  tutorial_full.ipynb  tutorial_quickstart.ipynb
python/nmf_rs/: __init__.py
rust/: Cargo.toml
rust/src/: fcnnls.rs  lib.rs
tests/: reference_nmf.R  reference_snmf.R  test_lsnmf_snmf.py  test_parity.py  test_snmf_parity.py
