[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "nmf-rs"
version = "0.1.0"
description = "Rust port of R NMF package — bit-equivalent multiplicative updates (brunet/lee/offset/nsNMF), parallelised with rayon."
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Zehua Zeng", email = "starlitnightly@163.com"},
]
keywords = [
    "NMF", "nonnegative-matrix-factorization", "single-cell", "rust",
    "scRNA-seq", "factor-analysis", "matrix-factorization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
nndsvd = ["scikit-learn>=1.2"]
dev = [
    "pytest>=7",
    "scipy>=1.10",
    "pandas>=1.5",
    "anndata>=0.9",
    "scikit-learn>=1.2",
    "scanpy>=1.9",
    "matplotlib>=3.6",
    "nbformat>=5",
    "nbclient>=0.10",
]

[project.urls]
Homepage      = "https://github.com/omicverse/rust-NMF"
Repository    = "https://github.com/omicverse/rust-NMF"
Issues        = "https://github.com/omicverse/rust-NMF/issues"
"Upstream R"  = "https://github.com/renozao/NMF"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "nmf_rs._rust"
python-source = "python"
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
]
